0.14.2
 - fix: partially revert breaking change in 0.14.0 ("imaging mode"
   was previously used when exporting data in PyJibe and this metadata
   key should not change)
 - tests: add .tab and .h5 test files
 - enh: added height span for QMap data
 - ref: renamed QMap feature "lowest height" to "height base point"
 - ref: changed prefix to "data" for all QMap data
0.14.1
 - fix: populate AFMQMap grid metadata for AFM workshop format (#12)
 - enh: speed-up QMap computation by decorator-based caching
 - ref: move QMap grid index computation to MetaData class
0.14.0
 - BREAKING CHANGE: changed 'mode' to 'modality' throughout afmformats
 - feat: introduced afmformats.AFMGroup, a container for AFMData (#11)
 - feat: introduced afmformats.AFMQMap for managing quantitative
   AFMData (#11)
 - feat: allow to use other derived classes of AFMData when loading
   experimental data via the `data_classes_by_modality` option
 - ref: `AFMData.export` is deprecated in favor of `AFMData.export_data`
 - ref: renamed submodule afm_fdist to mod_force_distance
0.13.3
 - enh: improve speed when loading data by avoiding accessing
   data during initialization
 - fix: JPK file format reader speed regression caused by #10
   (implemented ArchiveCache)
0.13.2
 - enh: make sure people don't think they can load a data file
   with a different spring constant or sensitivity
0.13.1
 - fix: make sure callback functions are always used
0.13.0
 - feat: support zipped AFM workshop map data (#5)
 - feat: added `find_data` method
 - enh: make MissingMetaDataError class special (missing
   metadata are stored as property)
 - enh: add "detect" function for JPK file format
 - docs: add missing objects to ``__all__`` (autoapi)
 - ref: code cleanup
0.12.6
 - ref: DeprecationWarning: np.float from numpy 1.20
0.12.5
 - fix: JPK file format reader kept the zip files open indefinitely
   which resulted in OSError "Too many open files" (#10)
 - ci: removed appveyor build
0.12.4