@@ -7,7 +7,7 @@
 #   "feedback mode": "contact",
 #   "imaging mode": "force-distance",
 #   "instrument": "JPK00758-CellHesion-200",
-#   "point count": 4029,
+#   "point count": 4028,
 #   "position x": -0.0021390848214285713,
 #   "position y": -0.002565485491071429,
 #   "rate approach": 2000.0,
